--- a/LearningEnglishWeb/Views/Shared/_Layout.cshtml
+++ b/LearningEnglishWeb/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Vocabulary" asp-action="Index">Словарь</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="WordSet" asp-action="Index">Наборы слов</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="WordSet" asp-action="Index" asp-route-id="">Наборы слов</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Administrator" asp-action="Index">Администрирование</a>
