--- a/LearningEnglishWeb/Views/TranslateWordTraining/TranslateWordTrainingAnswerResult.cshtml
+++ b/LearningEnglishWeb/Views/TranslateWordTraining/TranslateWordTrainingAnswerResult.cshtml
@@ -1,16 +1,17 @@
 ﻿@model LearningEnglishWeb.ViewModels.Training.TranslateWord.TranslateWordAnswerViewModel
 
 
-<div class="text-center">
-    <h4>@Model.Word</h4>
-</div>
 
 <div class="m-4 text-center">
 
 
     @if (@Model.UserTranslation != @Model.RightTranslation)
     {
-        <h5> <span  class="text-danger"> <s>@Model.UserTranslation </s></span> <span class="text-success">@Model.RightTranslation</span> </h5>
+        <h5 class="p-2">
+             <span  class="text-danger"> <s>@Model.UserTranslation </s></span>
+            
+             <span class="@(@Model.UserTranslation == null ? "text-danger" : "text-success")">@Model.RightTranslation</span> 
+        </h5>
     }
     else
     {
@@ -19,7 +20,6 @@
 </div>
 
 <div class="text-center">
-
     <button data-request-url="@Url.Action("GetNextQuestion")" class="btn btn-primary w-50 nextAnswerBtn"> Следующий вопрос</button>
 </div>
 
