--- a/LearningEnglishWeb/Views/CollectWordTraining/CollectWordTrainingQuestion.cshtml
+++ b/LearningEnglishWeb/Views/CollectWordTraining/CollectWordTrainingQuestion.cshtml
@@ -6,22 +6,24 @@
 </div>
 
 <div class="row">
-    <div class="col text-center" id="answerRefreshArea">
+    <div class="col text-center">
         <h4 class="text-center">
-            <span> @Model.Word </span>
+            <span>@Model.Word</span>
             <button class="audio btn p-0" data-request-url="@Url.Action("GetAudio", "Vocabulary")">
                 <i class="fas audio fa-play"></i>
             </button>
         </h4>
         <img id="wordImage" src="@Model.ImageSrc"  />
 
-        <div class="answerArea text-center"> </div>
-        <div class="questionArea">
-            @foreach (char letter in Model.Letters)
-            {
-                <button class="letter btn text-center btn-info m-1 text-white"> @letter </button>
-            }
+        <div id="answerRefreshArea">
+            <div class="answerArea text-center"> </div>
+            <div class="questionArea">
+                @foreach (char letter in Model.Letters)
+                {
+                    <button class="letter btn text-center btn-info m-1 text-white">@letter</button>
+                }
 
+            </div>
         </div>
     </div>
 </div>
