--- a/LearningEnglishWeb/Views/TranslateWordTraining/TranslateWordTrainingQuestion.cshtml
+++ b/LearningEnglishWeb/Views/TranslateWordTraining/TranslateWordTrainingQuestion.cshtml
@@ -6,11 +6,20 @@
 </div>
 
 <div class="text-center">
-    <h4> @Model.Word </h4>
+    <h4>
+        <span>@Model.Word</span>
+        <button class="audio btn p-0" data-request-url="@Url.Action("GetAudio", "Vocabulary")">
+            <i class="fas audio fa-play"></i>
+        </button>
+    </h4>
+    <img id="wordImage" src="@Model.ImageSrc" />
 </div>
-<div class="form-group  m-4">
-    <input type="text" class="form-control" placeholder="Ваш перевод" />
-</div>
-<div class="text-center ">
-    <button data-request-url="@Url.Action("CheckAnswer")" class="checkAnswerBtn dontKnowBtn btn btn-warning w-50 text-white  text-center">Не знаю</button>
+
+<div id="answerRefreshArea">
+    <div class="form-group  m-4">
+        <input type="text" class="form-control" placeholder="Ваш перевод" />
+    </div>
+    <div class="text-center ">
+        <button data-request-url="@Url.Action("CheckAnswer")" class="skipBtn btn btn-warning w-50 text-white  text-center">Не знаю</button>
+    </div>
 </div>
