--- a/LearningEnglishWeb/Views/Shared/_Layout.cshtml
+++ b/LearningEnglishWeb/Views/Shared/_Layout.cshtml
@@ -55,15 +55,9 @@
     <div class="container">
         <partial name="_CookieConsentPartial" />
         <div class="row">
-            <div class="col-sm-1 col-md-2 col-3">
-
-            </div>
-            <main role="main" class="col-sm-10 col-md-8 col-6">
+            <main role="main" class="col">
                 @RenderBody()
             </main>
-            <div class="col-sm-1 col-md-2 col-3">
-
-            </div>
         </div>
     </div>
 
