--- a/LearningEnglishWeb/wwwroot/css/site.css
+++ b/LearningEnglishWeb/wwwroot/css/site.css
@@ -73,6 +73,10 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
+.carousel-control-next,
+.carousel-control-prev {
+    filter: invert(100%);
+}
 
 .trainingCard {
     height: 190px;
@@ -86,4 +90,17 @@ body {
 
 .add-word-button{
     visibility: hidden;
+}
+
+.img-thumbnail {
+    max-height: 100%;
+    max-width: 100%;
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
