--- a/LearningEnglishWeb/Views/CollectWordTraining/CollectWordTrainingQuestion.cshtml
+++ b/LearningEnglishWeb/Views/CollectWordTraining/CollectWordTrainingQuestion.cshtml
@@ -1,28 +1,28 @@
 ﻿@using LearningEnglishWeb.ViewModels.Training.CollectWord
 @model CollectWordQuestionViewModel
 
-<div class="row mb-2">
-    <h5 class="col text-center">Вопрос @Model.QuestionNumber </h5>
-</div>
-
 <div class="row">
     <div class="col text-center">
-        <h4 class="text-center">
-            <span>@Model.Word</span>
-            <button class="audio btn p-0" data-request-url="@Url.Action("GetAudio", "Vocabulary")">
-                <i class="fas audio fa-play"></i>
-            </button>
-        </h4>
-        <img id="wordImage" src="@Model.ImageSrc"  />
-
+        <div class="cwQuestionArea">
+            <h5>Вопрос @Model.QuestionNumber </h5>
+            <h4>
+                <span>@Model.Word</span>
+                <button class="audio btn p-0" data-request-url="@Url.Action("GetAudio", "Vocabulary")">
+                    <i class="fa audio fa-play"></i>
+                </button>
+            </h4>
+            <img id="wordImage" src="@Model.ImageSrc" />
+        </div>
         <div id="answerRefreshArea">
-            <div class="answerArea text-center"> </div>
-            <div class="questionArea">
+            <div class="userAnswerArea"> </div>
+            <div class="optionsArea">
                 @foreach (char letter in Model.Letters)
                 {
                     <button class="letter btn text-center btn-info m-1 text-white">@letter</button>
                 }
-
+            </div>
+            <div>
+                <button class="btn btn-danger skipBtn">Не знаю</button>
             </div>
         </div>
     </div>
